# Data_Lineage_Hybrid

./: .env.example  .gitignore  README.md  config.py  config.yaml  docker-compose.yml  main.py  pyproject.toml  setup.sh
.github/: copilot-instructions.md
ai_engine/: __init__.py  base.py  bedrock_provider.py  evaluator.py  factory.py  lineage_graph.py  nvidia_provider.py  resolver.py
api/: main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  graphViews.js  layout.js  styles.css
frontend/src/components/: LineageEdge.jsx  ProcessNode.jsx  TableNode.jsx
graph/: __init__.py  queries.py  schema.py  writer.py
mock-code/COBOL/: CRDB2EXT.cbl  CRXMLGEN.cbl
mock-code/credit_risk_mart/COBOL/: CACXBIZ.cbl  CACXCTL.cbl  CACXDAO.cbl  CACXDQA.cbl  CACXDRV.cbl  CCUSBIZ.cbl  CCUSCTL.cbl  CCUSDAO.cbl  CCUSDQA.cbl  CCUSDRV.cbl  CEMPBIZ.cbl  CEMPCTL.cbl  CEMPDAO.cbl  CEMPDQA.cbl  CEMPDRV.cbl  CTXNBIZ.cbl  CTXNCTL.cbl  CTXNDAO.cbl  CTXNDQA.cbl  CTXNDRV.cbl
mock-code/credit_risk_mart/JCL/: CRJACX01.jcl  CRJACXLD.jcl  CRJACXQA.jcl  CRJCUS01.jcl  CRJCUSLD.jcl  CRJCUSQA.jcl  CRJEMP01.jcl  CRJEMPLD.jcl  CRJEMPQA.jcl  (+5 more)
mock_code2/COBOL/: CRTXNEXT.cbl
mock_code2/JCL/: CRJBHSCR.jcl
mock_code2/SQL/: MI4014_EXT_TABLE.sql  MI4014_STAGE_LOAD.sql  MI4014_VIEW.sql
mock_code2/data/: MI4014_Transaction_Extract_TSB_NAM65_20260514.xml
parsers/: __init__.py  base.py  cobol_parser.py  jcl_parser.py  orchestrator.py  plsql_parser.py  sort_resolver.py  sql_utils.py
tests/: test_complex_lineage.py  test_coverage_telemetry.py  test_parsers.py
(+33 files in other folders)
