[project]
name = "hybrid-lineage-engine"
version = "0.1.0"
description = "Hybrid (deterministic + AI edge-resolution) data lineage engine for COBOL / JCL / PL-SQL"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "neo4j>=5.24",
    "sqlparse>=0.5",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "boto3>=1.35",          # Amazon Bedrock provider
    "openai>=1.50",         # NVIDIA NIM (OpenAI-compatible) provider
    "pydantic>=2.8",
    "langgraph>=1.2.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
